syntax = "proto3";

package v1;


service FileService {
    // createUser rpc
    rpc CreateUser( CreateUserRequest) returns (CreateUserResponse){};

   //client side straming RPC
   rpc UploadFile(stream Chunk) returns (UploadStatus) {};

    // server side streaming RPC
    rpc DownloadFile(DownloadFileRequest) returns (stream Chunk){};


    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse){};


}

message user{
    string username=1;
    string password=2;
}


message CreateUserRequest{
    string api=1;
    user userDetails=2;
}

message CreateUserResponse{
    string message=1;
}


message Chunk {
    bytes Content = 1;
}

enum UploadStatusCode {
Unknown = 0;
Ok = 1;
Failed = 2;
}


message UploadStatus {
string message = 1;
UploadStatusCode code = 2;
}


message DownloadFileRequest{
    string api=1;
    user userDetails=2;
}

message DeleteUserRequest{
    string api=1;
    user userDetails=2;
}

message DeleteUserResponse{
    string message=1;
}


// protoc proto/pdf.proto --go_out=plugins=grpc:.





